--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,26 @@
         "description": "This extension predicts rating changes for Codeforces. It shows approximate deltas during and after the contest.",
         
         "manifest_version": 3,
+        
+        "icons":
+	{
+		"48": "static/icon48.png",
+		"64": "static/icon64.png", 
+		"128": "static/icon128.png"
+	},
+
+	"browser_action":
+	{
+		"default_icon": 
+		{
+			"48": "static/icon48.png",
+			"64": "static/icon64.png", 
+			"128": "static/icon128.png"
+		},
+
+		"default_title": "CF-Predictor",
+		"default_popup": "popup.html"
+	},
         "host_permissions":
 	[
 		"https://cf-predictor-frontend.herokuapp.com/",
